# HeptaLinker

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  linker.cpp
app/src/main/java/com/example/heptalinker/: MainActivity.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
heptalinker/: build.gradle.kts
heptalinker/src/main/cpp/: CMakeLists.txt  entry.cpp  heptalinker.cpp  jni_proxy.cpp  jni_proxy.h  linker.cpp  linker.h  linker_phdr.h
heptalinker/src/main/cpp/include/: entry.h  heptalinker.h
